unpackaged/main/default/objects/Contact/fields/Acquired_or_Organic_Customer__c.field-meta.xml
<CustomField>
    <fullName>Acquired_or_Organic_Customer__c</fullName>
    <description>Was this customer generated organically or acquired from a previous company or portfolio?</description>
    <label>Organic or Acquired Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Acquired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>