unpackaged/main/default/objects/Contact/fields/ACT_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>ACT_Completed_Date__c</fullName>
    <label>ACT Completed Date</label>
    <type>Date</type>
</CustomField>