unpackaged/main/default/objects/Contact/fields/Alchemy_Core_Training_completed__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_Core_Training_completed__c</fullName>
    <label>Alchemy Core Training completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alchemy Core Training</fullName>
            </value>
            <value>
                <fullName>Walk the Walk</fullName>
            </value>
            <value>
                <fullName>How U Read the UB</fullName>
            </value>
            <value>
                <fullName>The Nitty Gritty</fullName>
            </value>
            <value>
                <fullName>ITC, Rates, and Utilities</fullName>
            </value>
            <value>
                <fullName>Just…Ask…Questions</fullName>
            </value>
            <value>
                <fullName>Dirty Power vs. Clean Power</fullName>
            </value>
            <value>
                <fullName>The Many Ways to Buy Solar</fullName>
            </value>
            <value>
                <fullName>The Solar Journey</fullName>
            </value>
            <value>
                <fullName>The Phone is Your Friend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>