unpackaged/main/default/objects/Contact/fields/Alchemy_User_Status__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_User_Status__c</fullName>
    <label>Alchemy User Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>