unpackaged/main/default/objects/Contact/fields/Alchemy_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_User_Type__c</fullName>
    <label>Alchemy User Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting/ Finance</fullName>
            </value>
            <value>
                <fullName>External Administrator</fullName>
            </value>
            <value>
                <fullName>Internal Administrator</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Setter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>