unpackaged/main/default/objects/Contact/fields/Ambassador_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ambassador Campaign</label>
    <referenceTo>Ambassador__Ambassador_Campaign__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>