unpackaged/main/default/objects/Contact/fields/Approved_Credits__c.field-meta.xml
<CustomField>
    <fullName>Approved_Credits__c</fullName>
    <formula>""</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Credits</label>
    <type>Text</type>
</CustomField>