unpackaged/main/default/objects/Contact/fields/Are_you_currently_experiencing_problems__c.field-meta.xml
<CustomField>
    <fullName>Are_you_currently_experiencing_problems__c</fullName>
    <label>Are you currently experiencing problems?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>