unpackaged/main/default/objects/Contact/fields/Community_Lead__c.field-meta.xml
<CustomField>
    <fullName>Community_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Community Lead)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>