unpackaged/main/default/objects/Contact/fields/Company_Acquired_From__c.field-meta.xml
<CustomField>
    <fullName>Company_Acquired_From__c</fullName>
    <description>Name of the company this customer was acquired from</description>
    <label>Company Acquired From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red River</fullName>
            </value>
            <value>
                <fullName>Eco-Clean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>