unpackaged/main/default/objects/Contact/fields/Contact_Info_Correct__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_Correct__c</fullName>
    <label>Contact Info Correct?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>