unpackaged/main/default/objects/Contact/fields/Contact_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contact_Manager__c</fullName>
    <label>Partner Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alaina Pianetti</fullName>
            </value>
            <value>
                <fullName>Alyssa Haley</fullName>
            </value>
            <value>
                <fullName>Andrew Catapano</fullName>
            </value>
            <value>
                <fullName>Anthony Silvestri</fullName>
            </value>
            <value>
                <fullName>Ashley Uptegraft</fullName>
            </value>
            <value>
                <fullName>Chris Graham</fullName>
            </value>
            <value>
                <fullName>Dan Devito</fullName>
            </value>
            <value>
                <fullName>James Carter</fullName>
            </value>
            <value>
                <fullName>Jesse Brennan</fullName>
            </value>
            <value>
                <fullName>Ken Crabb</fullName>
            </value>
            <value>
                <fullName>Lee Mauldin</fullName>
            </value>
            <value>
                <fullName>Matt Collins</fullName>
            </value>
            <value>
                <fullName>McKenna Beam</fullName>
            </value>
            <value>
                <fullName>Sean Fahey</fullName>
            </value>
            <value>
                <fullName>Taylor Coppin</fullName>
            </value>
            <value>
                <fullName>Wes Jones</fullName>
            </value>
            <value>
                <fullName>Jonathan Van Putten</fullName>
            </value>
            <value>
                <fullName>Ethan Brown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>