unpackaged/main/default/objects/Contact/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <description>How many years is the customer's contract?</description>
    <label>Contract Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>