unpackaged/main/default/objects/Contact/fields/Curb_Notes__c.field-meta.xml
<CustomField>
    <fullName>Curb_Notes__c</fullName>
    <label>Curb Notes</label>
    <type>TextArea</type>
</CustomField>