unpackaged/main/default/objects/Contact/fields/Curb_Password__c.field-meta.xml
<CustomField>
    <fullName>Curb_Password__c</fullName>
    <label>Curb Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>