unpackaged/main/default/objects/Contact/fields/Curb_SN__c.field-meta.xml
<CustomField>
    <fullName>Curb_SN__c</fullName>
    <description>CURB device serial number</description>
    <inlineHelpText>CURB device serial number</inlineHelpText>
    <label>Curb SN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>