unpackaged/main/default/objects/Contact/fields/Curb_User_Name_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Curb_User_Name_e_mail__c</fullName>
    <label>Curb User Name / e-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>