unpackaged/main/default/objects/Contact/fields/Customer_Care_Representative__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Representative__c</fullName>
    <label>Customer Care Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>