unpackaged/main/default/objects/Contact/fields/Date_of_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Deposit__c</fullName>
    <label>Date of Deposit</label>
    <type>Date</type>
</CustomField>