unpackaged/main/default/objects/Contact/fields/Date_System_Turned_On__c.field-meta.xml
<CustomField>
    <fullName>Date_System_Turned_On__c</fullName>
    <description>When was the net meter installed?</description>
    <label>Date Net Meter Installed</label>
    <type>Date</type>
</CustomField>