unpackaged/main/default/objects/Contact/fields/Do_you_have_solar_panels_on_your_home__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_solar_panels_on_your_home__c</fullName>
    <label>Do you have solar panels on your home?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Do_you_have_solar_panels_on_your_home</valueSetName>
    </valueSet>
</CustomField>