unpackaged/main/default/objects/Contact/fields/Email_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Email_Commissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Off if the Contact would like Commission Reports to be emailed to them.</description>
    <label>Email Commissions</label>
    <type>Checkbox</type>
</CustomField>