unpackaged/main/default/objects/Contact/fields/Email_hidden__c.field-meta.xml
<CustomField>
    <fullName>Email_hidden__c</fullName>
    <formula>Email</formula>
    <label>Email_hidden</label>
    <type>Text</type>
</CustomField>