unpackaged/main/default/objects/Contact/fields/Explicit_Email_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Email_Consent_Date__c</fullName>
    <label>Explicit Email Consent Date</label>
    <type>Date</type>
</CustomField>