unpackaged/main/default/objects/Contact/fields/Explicit_Email_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Email_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Explicit Email Opt-in</label>
    <type>Checkbox</type>
</CustomField>