unpackaged/main/default/objects/Contact/fields/Have_you_seen_any_savings__c.field-meta.xml
<CustomField>
    <fullName>Have_you_seen_any_savings__c</fullName>
    <label>Have you seen any savings?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>