unpackaged/main/default/objects/Contact/fields/Help_Script__c.field-meta.xml
<CustomField>
    <fullName>Help_Script__c</fullName>
    <formula>"Hello! Is   FirstName  there? Hi   FirstName . My name is Jennifer with Palmetto solar. The purpose for me calling you today is because we are doing some due diligence with the current customers for Red River, who is your current solar leasing company. Palmetto Solar and Red River are in negotiations to a possible merger and/or acquisition to turn over your account from Red River to us here at Palmetto Solar. If the merger and/or acquisition is approved we will be able to fulfill the original maintenance and lease agreement as well as honor the 20 year warranty, in addition to offering you better local service. May I please ask you seven simple question so that we can gain a better understanding of how we can position ourselves to help you with all of your solar needs?"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Script</label>
    <type>Text</type>
</CustomField>