unpackaged/main/default/objects/Contact/fields/How_long_have_you_had_your_system__c.field-meta.xml
<CustomField>
    <fullName>How_long_have_you_had_your_system__c</fullName>
    <label>Have you had any problems?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Does not work</fullName>
            </value>
            <value>
                <fullName>Yes - Can't get ahold of anyone</fullName>
            </value>
            <value>
                <fullName>Yes - Don't know who owns</fullName>
            </value>
            <value>
                <fullName>Yes - Who do I pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>