unpackaged/main/default/objects/Contact/fields/If_Yes_How_Much__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_How_Much__c</fullName>
    <label>If Yes - How Much?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$10-$20</fullName>
            </value>
            <value>
                <fullName>$21-$30</fullName>
            </value>
            <value>
                <fullName>$31-$40</fullName>
            </value>
            <value>
                <fullName>$41-$50</fullName>
            </value>
            <value>
                <fullName>$50+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>