unpackaged/main/default/objects/Contact/fields/Inside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep__c</fullName>
    <label>Inside Sales Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bennett Barton</fullName>
            </value>
            <value>
                <fullName>Chris Graham</fullName>
            </value>
            <value>
                <fullName>Elijah Brown</fullName>
            </value>
            <value>
                <fullName>Ken Crabb</fullName>
            </value>
            <value>
                <fullName>McKenna Beam</fullName>
            </value>
            <value>
                <fullName>Taylor Coppin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>