unpackaged/main/default/objects/Contact/fields/Inspection_Scheduled_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Scheduled_Completed_Date__c</fullName>
    <formula>Opportunity__r.Inspection_Completed_Date__c</formula>
    <label>Inspection Scheduled / Completed Date</label>
    <type>Date</type>
</CustomField>