unpackaged/main/default/objects/Contact/fields/LinkedIn_Profile_Recorded__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn Profile Recorded</label>
    <type>Checkbox</type>
</CustomField>