unpackaged/main/default/objects/Contact/fields/May_Contact_Customer_After_6_PM__c.field-meta.xml
<CustomField>
    <fullName>May_Contact_Customer_After_6_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>May Contact Customer After 6 PM</label>
    <type>Checkbox</type>
</CustomField>