unpackaged/main/default/objects/Contact/fields/Member_Premium_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Member_Premium_Subscription__c</fullName>
    <label>Member Premium Subscription</label>
    <type>Date</type>
</CustomField>