unpackaged/main/default/objects/Contact/fields/Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Charge__c</fullName>
    <description>How much does the customer pay per month?</description>
    <label>Monthly Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>