unpackaged/main/default/objects/Contact/fields/of_Children__c.field-meta.xml
<CustomField>
    <fullName>of_Children__c</fullName>
    <label># of Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>