unpackaged/main/default/objects/Contact/fields/Opportunity_Fields_are_Completed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Fields_are_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A Technology Team Member has confirmed the Curb SN and Utility Cost per Unit ($) are filled in correctly on the Opportunity object.</inlineHelpText>
    <label>Opportunity Fields are Completed</label>
    <type>Checkbox</type>
</CustomField>