unpackaged/main/default/objects/Contact/fields/Opt_out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Reason__c</fullName>
    <label>Opt-out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rocket Mortgage</fullName>
            </value>
            <value>
                <fullName>Email response</fullName>
            </value>
            <value>
                <fullName>SMS response</fullName>
            </value>
            <value>
                <fullName>Phone response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>