unpackaged/main/default/objects/Contact/fields/Palmetto_Cloud_Paying_Customer__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Cloud_Paying_Customer__c</fullName>
    <label>Palmetto Cloud Paying Customer</label>
    <type>Date</type>
</CustomField>