unpackaged/main/default/objects/Contact/fields/Palmetto_Cloud_Registered_User__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Cloud_Registered_User__c</fullName>
    <inlineHelpText>Auto-populated from Palmetto Cloud</inlineHelpText>
    <label>Palmetto Cloud Registered User</label>
    <type>Date</type>
</CustomField>