unpackaged/main/default/objects/Contact/fields/Palmetto_Employee__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Palmetto Employee</label>
    <type>Checkbox</type>
</CustomField>