unpackaged/main/default/objects/Contact/fields/Palmetto_Relation__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Relation__c</fullName>
    <label>Palmetto Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cordes Lucas</fullName>
            </value>
            <value>
                <fullName>Tim Zwerner</fullName>
            </value>
            <value>
                <fullName>Chris Graham</fullName>
            </value>
            <value>
                <fullName>Kelly Lewis</fullName>
            </value>
            <value>
                <fullName>Chris Kemper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>