unpackaged/main/default/objects/Contact/fields/Parish__c.field-meta.xml
<CustomField>
    <fullName>Parish__c</fullName>
    <label>Parish</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ascension</fullName>
            </value>
            <value>
                <fullName>East Baton Rouge</fullName>
            </value>
            <value>
                <fullName>Jefferson</fullName>
            </value>
            <value>
                <fullName>LaFourche</fullName>
            </value>
            <value>
                <fullName>Orleans</fullName>
            </value>
            <value>
                <fullName>St. Bernard</fullName>
            </value>
            <value>
                <fullName>St. Charles</fullName>
            </value>
            <value>
                <fullName>St. John the Baptist</fullName>
            </value>
            <value>
                <fullName>St. Tammany</fullName>
            </value>
            <value>
                <fullName>Tangipahoa</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>