unpackaged/main/default/objects/Contact/fields/Personal_Referral_Number__c.field-meta.xml
<CustomField>
    <fullName>Personal_Referral_Number__c</fullName>
    <description>Referral number of person providing referrals to Palmetto.</description>
    <label>Personal Referral Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>