unpackaged/main/default/objects/Contact/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Alchemy User Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negative dealer experience</fullName>
            </value>
            <value>
                <fullName>No lead generation experience</fullName>
            </value>
            <value>
                <fullName>No longer with org</fullName>
            </value>
            <value>
                <fullName>No solar experience</fullName>
            </value>
            <value>
                <fullName>Offboarded dealer</fullName>
            </value>
            <value>
                <fullName>Part time</fullName>
            </value>
            <value>
                <fullName>Single shared login</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>