unpackaged/main/default/objects/Contact/fields/Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code__c</fullName>
    <label>Referral Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>