unpackaged/main/default/objects/Contact/fields/Referred_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Alchemist BD Referral</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referred Sales Reps</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>