unpackaged/main/default/objects/Contact/fields/SalesForce_logging_Inbound_customer_lea__c.field-meta.xml
<CustomField>
    <fullName>SalesForce_logging_Inbound_customer_lea__c</fullName>
    <label>How long have you had your system?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>Don't know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>