unpackaged/main/default/objects/Contact/fields/Site_Audit_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Audit_Scheduled_Date__c</fullName>
    <formula>Opportunity__r.Site_Audit_FieldCompleted_Date__c</formula>
    <label>Site Audit Scheduled Date</label>
    <type>Date</type>
</CustomField>