unpackaged/main/default/objects/Contact/fields/SMART_Home_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>SMART_Home_Purchase_Date__c</fullName>
    <label>SMART Home Purchase Date</label>
    <type>Date</type>
</CustomField>