unpackaged/main/default/objects/Contact/fields/SolarEdge_API_Key__c.field-meta.xml
<CustomField>
    <fullName>SolarEdge_API_Key__c</fullName>
    <description>API key generated for this user in SolarEdge</description>
    <inlineHelpText>API key generated for this user in SolarEdge</inlineHelpText>
    <label>SolarEdge API Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>