unpackaged/main/default/objects/Contact/fields/SolarEdge_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>SolarEdge_Site_ID__c</fullName>
    <label>SolarEdge Site ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>