unpackaged/main/default/objects/Contact/fields/SST_Date_completed__c.field-meta.xml
<CustomField>
    <fullName>SST_Date_completed__c</fullName>
    <label>SST Date completed</label>
    <type>Date</type>
</CustomField>