unpackaged/main/default/objects/Contact/fields/State_Specific_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Training_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Specific Training Completed</label>
    <type>Checkbox</type>
</CustomField>